# last12

./: README.md  img_fastapi  main.py  main_1.py  mnogo_teksta.py  pyproject.toml
last12/: __init__.py
