[tool.poetry]
name = "last12"
version = "0.1.0"
description = ""
authors = ["Anton <5991anton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
transformers = "^4.25.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
